--- a/CurryOn/CurryOn.Xml/CurryOn.Xml.fsproj
+++ b/CurryOn/CurryOn.Xml/CurryOn.Xml.fsproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>0.1.0-prerelease</Version>
+    <Version>0.1.1-prerelease</Version>
     <Authors>Eshbach, Aaron</Authors>
     <Company>CurryOn</Company>
     <Description>F# Idiomatic interface for working with XDocument and XElement objects</Description>
@@ -15,6 +15,7 @@
     <Compile Include="XName.fs" />
     <Compile Include="XDocument.fs" />
     <Compile Include="XElement.fs" />
+    <Compile Include="XAttribute.fs" />
   </ItemGroup>
 
   <ItemGroup>
