Add name operation for files

--- a/CurryOn/CurryOn.Xml/CurryOn.Xml.fsproj
+++ b/CurryOn/CurryOn.Xml/CurryOn.Xml.fsproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\CurryOn.IO\CurryOn.IO.fsproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="5.0.1" />
+  </ItemGroup>
+
 </Project>
