--- a/CurryOn/CurryOn.Awaitable/CurryOn.Awaitable.fsproj
+++ b/CurryOn/CurryOn.Awaitable/CurryOn.Awaitable.fsproj
@@ -16,6 +16,8 @@
     <None Include="Test.fsx" />
   </ItemGroup>
 
-  <ItemGroup />
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="6.0.0" />
+  </ItemGroup>
 
 </Project>
