--- a/CurryOn/CurryOn.Agent/CurryOn.Agent.fsproj
+++ b/CurryOn/CurryOn.Agent/CurryOn.Agent.fsproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>0.1.0-prerelease</Version>
+    <Version>0.2.0</Version>
     <Authors>Eshbach, Aaron</Authors>
     <Company>CurryOn</Company>
     <Description>Extensions to the F# Mailbox Processor to enable agent pooling and routing</Description>
