--- a/CurryOn/CurryOn.Awaitable/CurryOn.Awaitable.fsproj
+++ b/CurryOn/CurryOn.Awaitable/CurryOn.Awaitable.fsproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>0.1.0-prerelease</Version>
+    <Version>0.2.0</Version>
     <Authors>Eshbach, Aaron</Authors>
     <Company>CurryOn</Company>
     <Description>Uniform "await" computation for all Awaitable types, such as F# Async, .NET Task and ValueTask, IAsyncResult, IEvent, etc.</Description>
