--- a/CurryOn/CurryOn.Common/CurryOn.Common.fsproj
+++ b/CurryOn/CurryOn.Common/CurryOn.Common.fsproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.1.2-prerelease</Version>
+    <Version>0.2.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Eshbach, Aaron</Authors>
     <Company>CurryOn</Company>
