--- a/CurryOn/CurryOn.Domain/CurryOn.Domain.fsproj
+++ b/CurryOn/CurryOn.Domain/CurryOn.Domain.fsproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>0.1.0-prerelease</Version>
+    <Version>0.2.0</Version>
     <Authors>Eshbach, Aaron</Authors>
     <Company>CurryOn</Company>
     <Description>Domain Modeling attributes for CurryOn Framework</Description>
