--- a/CurryOn/CurryOn.EventBus.RabbitMq/CurryOn.EventBus.RabbitMq.fsproj
+++ b/CurryOn/CurryOn.EventBus.RabbitMq/CurryOn.EventBus.RabbitMq.fsproj
@@ -2,6 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.2.0</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>Eshbach, Aaron</Authors>
+    <Company>CurryOn</Company>
+    <Description>CurryOn EventBus Implementation using Rabbit MQ</Description>
+    <PackageTags>event-bus messaging fsharp rabbit-mq</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
