--- a/CurryOn/CurryOn.EventBus/CurryOn.EventBus.fsproj
+++ b/CurryOn/CurryOn.EventBus/CurryOn.EventBus.fsproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.1.0-prerelease</Version>
+    <Version>0.2.0</Version>
     <Authors>Eshbach, Aaron</Authors>
     <Company>CurryOn</Company>
     <Description>EventBus Abstractios for CurryOn Framework</Description>
