--- a/CurryOn/CurryOn.Railway/CurryOn.Railway/CurryOn.Railway.fsproj
+++ b/CurryOn/CurryOn.Railway/CurryOn.Railway/CurryOn.Railway.fsproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>0.1.0-prerelease</Version>
+    <Version>0.2.0</Version>
     <Authors>Eshbach, Aaron</Authors>
     <Company>CurryOn</Company>
     <Description>Railway-Oriented Programming Framework for F#</Description>
