--- a/CurryOn/CurryOn.Tasks/CurryOn.Tasks.fsproj
+++ b/CurryOn/CurryOn.Tasks/CurryOn.Tasks.fsproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <Version>0.2.0</Version>
+    <Version>0.2.1</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Eshbach, Aaron</Authors>
     <Company>CurryOn</Company>
@@ -12,6 +12,7 @@
     <PackageProjectUrl>https://github.com/CurryOnCoders/CurryOn/tree/main/CurryOn/CurryOn.Tasks</PackageProjectUrl>
     <PackageLicenseExpression></PackageLicenseExpression>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageReleaseNotes>Fixed bug that could cause a hang when awaiting Result&lt;'a, 'b&gt;</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
