--- a/CurryOn/CurryOn.DependencyInjection/CurryOn.DependencyInjection.fsproj
+++ b/CurryOn/CurryOn.DependencyInjection/CurryOn.DependencyInjection.fsproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -8,6 +8,9 @@
     <Company>CurryOn</Company>
     <Description>F# Dependency Injection Library, including injected and injectedAsync computation expressions for runtime dependency binding.  Supports any DI Frameworks implementing Microsoft.Extensions.DependencyInjection interfaces.</Description>
     <PackageTags>di dependency-injection coref</PackageTags>
+    <PackageProjectUrl>https://github.com/CurryOnCoders/CurryOn/tree/main/CurryOn/CurryOn.DependencyInjection</PackageProjectUrl>
+	<PackageLicenseExpression></PackageLicenseExpression>
+	<PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,6 +21,13 @@
     <Compile Include="DependencyInjection.fs" />
     <Compile Include="TypeDiscovery.fs" />
   </ItemGroup>
+
+    <ItemGroup>
+	    <None Include="..\..\LICENSE">
+		    <Pack>True</Pack>
+		    <PackagePath></PackagePath>
+	    </None>
+    </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CurryOn.Common\CurryOn.Common.fsproj" />
